- update experiences, add other skills

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -15,10 +15,10 @@
         </div><!--//item-->
         {% endfor %}
     </div>
-    <div>
+    <br>
+    <div class="other-skills">
         {% for skill in site.data.other_skills %}
-        <span style="font-size: 14px;
-    font-weight: 700;" class="level-title">{{ skill }}</span>
+        <h3 class="skill">{{ skill }}</h3>
         {% endfor %}
     </div>
 
