- update email - refactor styling

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,10 +22,12 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: darken($theme-color, 15%);
   @include transition (all 0.4s ease-in-out);
+
   &:hover {
     text-decoration: underline;
     color: darken($theme-color, 30%);
   }
+
   &:focus {
     text-decoration: none;
   }
@@ -51,9 +53,11 @@ p {
   height: 100%;
   min-height: 800px;
   color: #fff;
+
   a {
     color: #fff;
   }
+
   .profile-container {
     padding: 30px;
     //background: darken($theme-color, 10%);
@@ -61,12 +65,14 @@ p {
     text-align: center;
     color: #fff;
   }
+
   .name {
     font-size: 32px;
     font-weight: 900;
     margin-top: 0;
     margin-bottom: 10px;
   }
+
   .tagline {
     color: rgba(256, 256, 256, 0.6);
     font-size: 16px;
@@ -74,6 +80,7 @@ p {
     margin-top: 0;
     margin-bottom: 0;
   }
+
   .profile {
     margin-bottom: 15px;
   }
@@ -86,27 +93,33 @@ p {
     border-radius: 100%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   }
+
   .contact-list {
     .fa {
       margin-right: 5px;
       font-size: 18px;
       vertical-align: middle;
     }
+
     li {
       margin-bottom: 15px;
+
       &:last-child {
         margin-bottom: 0;
       }
     }
+
     .email {
       .fa {
         font-size: 14px;
       }
     }
   }
+
   .container-block {
     padding: 30px;
   }
+
   .container-block-title {
     text-transform: uppercase;
     font-size: 16px;
@@ -114,30 +127,36 @@ p {
     margin-top: 0;
     margin-bottom: 15px;
   }
+
   .degree {
     font-size: 14px;
     margin-top: 0;
     margin-bottom: 5px;
   }
+
   .education-container {
     .item {
       margin-bottom: 15px;
+
       &:last-child {
         margin-bottom: 0;
       }
     }
+
     .meta {
       color: rgba(256, 256, 256, 0.6);
       font-weight: 500;
       margin-bottom: 0px;
       margin-top: 0;
     }
+
     .time {
       color: rgba(256, 256, 256, 0.6);
       font-weight: 500;
       margin-bottom: 0px;
     }
   }
+
   .languages-container {
     .lang-desc {
       color: rgba(256, 256, 256, 0.6);
@@ -146,8 +165,10 @@ p {
 
   .languages-list {
     margin-bottom: 0;
+
     li {
       margin-bottom: 10px;
+
       &:last-child {
         margin-bottom: 0;
       }
@@ -156,8 +177,10 @@ p {
 
   .interests-list {
     margin-bottom: 0;
+
     li {
       margin-bottom: 10px;
+
       &:last-child {
         margin-bottom: 0;
       }
@@ -169,6 +192,7 @@ p {
   background: #fff;
   padding: 60px;
   padding-right: 340px;
+
   .section-title {
     text-transform: uppercase;
     font-size: 20px;
@@ -177,6 +201,7 @@ p {
     position: relative;
     margin-top: 0;
     margin-bottom: 20px;
+
     .fa {
       width: 30px;
       height: 30px;
@@ -193,6 +218,7 @@ p {
     }
 
   }
+
   .section {
     margin-bottom: 60px;
   }
@@ -202,11 +228,13 @@ p {
       margin-bottom: 30px;
     }
   }
+
   .upper-row {
     position: relative;
     overflow: hidden;
     margin-bottom: 2px;
   }
+
   .job-title, .degree {
     color: $text-color;
     font-size: 16px;
@@ -214,12 +242,14 @@ p {
     margin-bottom: 0;
     font-weight: 500;
   }
+
   .time {
     position: absolute;
     right: 0;
     top: 0;
     color: $text-grey;
   }
+
   .company, .university {
     margin-bottom: 10px;
     color: $text-grey;
@@ -231,10 +261,12 @@ p {
     margin-top: 0;
     margin-bottom: 5px;
   }
+
   .projects-section {
     .intro {
       margin-bottom: 30px;
     }
+
     .item {
       margin-bottom: 15px;
     }
@@ -245,14 +277,17 @@ p {
     font-weight: 500;
     margin-bottom: 1px;
   }
+
   .publication-authors {
     font-style: italic;
     margin-bottom: 1px;
   }
+
   .publications-section {
     .intro {
       margin-bottom: 30px;
     }
+
     .item {
       margin-bottom: 15px;
     }
@@ -264,23 +299,54 @@ p {
     margin-bottom: 15px;
     overflow: hidden;
   }
+
   .level-title {
     font-size: 14px;
     margin-top: 0;
     margin-bottom: 12px;
   }
+
   .level-bar {
     height: 12px;
     background: $smoky-white;
   }
+
   .level-bar-inner {
     height: 12px;
     background: lighten($theme-color, 15%);
   }
 }
 
+
+.other-skills {
+  .skill {
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 12px;
+    display: inline-flex;
+
+    &:after {
+      content: "";
+      padding: 2px;
+      width: 2px;
+      height: 3px;
+      background: gray;
+      border-radius: 50%;
+      margin: 6px 8px;
+    }
+
+    &:last-child {
+      &:after {
+        content: none;
+
+      }
+    }
+  }
+}
+
 .footer {
   padding-top: 30px;
+
   .copyright {
     line-height: 1.6;
     color: $text-color-secondary;
